Full js implementation & logic
Created an array of objects. Each object - 1 to-do.
Array loads with every home page call and updates with every to-do user
change.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <div class="views">
     <div class="view view-main">
       <div class="pages">
-        /*'Home' page layout*/
         <div data-page="notes-home" class="page navbar-fixed">
-          /*Fixed navbar for 'notes-home' cuz material*/
           <div class="navbar">
             <div class="navbar-inner">
               <div class="center">Мои задачи</div>
@@ -25,58 +23,13 @@
               </div>
             </div>
           </div>
-          /*End fixed navbar*/
-          <div class="page-content page-content-no-padding-top">
+          <div class="page-content page-content-less-padding-top" id="notes-home">
             <div class="content-block">
-              <div class="list-block">
-                <ul>
-                  <li class="item-content">
-                    <label class="label-checkbox">
-                      <input type="checkbox" name="todo-1" value="Read book">
-                      <div class="item-media">
-                        <i class="icon icon-form-checkbox"></i>
-                      </div>
-                    </label>
-                    <a href="#notes-edit" class="item-link fit-with-label">
-                      <div class="item-inner">
-                        <div class="item-title">Read book</div>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="item-content">
-                    <label class="label-checkbox">
-                      <input type="checkbox" name="todo-2" value="Play Soccer">
-                      <div class="item-media">
-                        <i class="icon icon-form-checkbox"></i>
-                      </div>
-                    </label>
-                    <a href="#notes-edit" class="item-link fit-with-label">
-                      <div class="item-inner">
-                        <div class="item-title">Play Soccer</div>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="item-content">
-                    <label class="label-checkbox">
-                      <input type="checkbox" name="todo-3" value="Edit note">
-                      <div class="item-media">
-                        <i class="icon icon-form-checkbox"></i>
-                      </div>
-                    </label>
-                    <a href="#notes-edit" class="item-link fit-with-label">
-                      <div class="item-inner">
-                        <div class="item-title">Edit note</div>
-                      </div>
-                    </a>
-                  </li>
-                </ul>
-              </div>
+              
             </div>
           </div>
         </div>
-        /*'Add' page layout*/
         <div data-page="notes-add" class="page cached navbar-fixed">
-          /*Fixed navbar for 'notes-add' cuz material*/
           <div class="navbar">
             <div class="navbar-inner">
               <div class="left">
@@ -87,16 +40,14 @@
               <div class="center">Добавить задачу</div>
             </div>
           </div>
-          /**/
-          /*End fixed navbar*/
-          <div class="page-content">
+          <div class="page-content page-content-less-padding-top" id="notes-add">
             <div class="list-block inset">
               <ul>
                 <li class="align-top">
                   <div class="item-content">
                     <div class="item-inner">
                       <div class="item-input">
-                        <textarea name="" id="" cols="30" rows="10" placeholder="Что мне сегодня сделать?"></textarea>
+                        <textarea name="" id="textarea-add" cols="30" rows="10" placeholder="Что мне сегодня сделать?"></textarea>
                       </div>
                     </div>
                   </div>
@@ -104,7 +55,7 @@
                 <li>
                   <div class="item-content">
                     <div class="item-inner">
-                      <a href="" class="button button-fill color-green">Сохранить</a>
+                      <a href="" class="button button-fill color-green" id="note-add">Сохранить</a>
                     </div>
                   </div>
                 </li>
@@ -112,10 +63,7 @@
             </div>
           </div>
         </div>
-        /**/
-        /*'Edit' page layout*/
         <div data-page="notes-edit" class="page cached">
-          /*Fixed navbar for 'notes-edit' cuz material*/
           <div class="navbar">
             <div class="navbar-inner">
               <div class="left">
@@ -126,15 +74,14 @@
               <div class="center">Изменить задачу</div>
             </div>
           </div>
-          /*End fixed navbar*/
-          <div class="page-content">
+          <div class="page-content page-content-less-padding-top" id="notes-edit">
             <div class="list-block inset">
               <ul>
                 <li class="align-top">
                   <div class="item-content">
                     <div class="item-inner">
                       <div class="item-input">
-                        <textarea name="" id="" cols="30" rows="10" placeholder="Что мне сегодня сделать?"></textarea>
+                        <textarea name="" id="textarea-edit" cols="30" rows="10" placeholder="Что мне сегодня сделать?"></textarea>
                       </div>
                     </div>
                   </div>
@@ -143,8 +90,8 @@
                   <div class="item-content">
                     <div class="item-inner">
                       <div class="buttons-row">
-                        <a href="" class="button button-fill color-red">Удалить</a>
-                        <a href="" class="button button-fill color-green">Сохранить</a>
+                        <a href="" class="button button-fill color-red" id="note-delete">Удалить</a>
+                        <a href="" class="button button-fill color-green" id="note-save">Сохранить</a>
                       </div>
                     </div>
                   </div>
@@ -153,7 +100,6 @@
             </div>
           </div>
         </div>
-        /**/
       </div>
     </div>
   </div>
